RESOLVED FIXED108873
The [[ThrowTypeError]] function object must not be extensible
https://bugs.webkit.org/show_bug.cgi?id=108873
Summary The [[ThrowTypeError]] function object must not be extensible
André Bargull
Reported 2013-02-04 15:58:13 PST
See ECMAScript 5.1 [13.2.3] "The [[ThrowTypeError]] Function Object", the [[Extensible]] internal property of the [[ThrowTypeError]] is set to `false`. test case: --- (function() { var throwTypeError = Object.getOwnPropertyDescriptor(function(){"use strict"}, "caller").get; return Object.isExtensible(throwTypeError); })() --- Actual: `Object.isExtensible(throwTypeError)` returns `true` Expected: `Object.isExtensible(throwTypeError)` returns `false`
Attachments
Patch (4.51 KB, patch)
2020-08-22 13:00 PDT, Alexey Shvayka
no flags
Mark S. Miller
Comment 1 2014-05-11 11:12:22 PDT
What is the status of this issue?
Alexey Shvayka
Comment 2 2020-08-22 13:00:31 PDT
Yusuke Suzuki
Comment 3 2020-08-22 13:11:32 PDT
Comment on attachment 407056 [details] Patch r=me
EWS
Comment 4 2020-08-22 15:25:39 PDT
Committed r266036: <https://trac.webkit.org/changeset/266036> All reviewed patches have been landed. Closing bug and clearing flags on attachment 407056 [details].
Radar WebKit Bug Importer
Comment 5 2020-08-22 15:26:15 PDT
Note You need to log in before you can comment on or make changes to this bug.