The [[ThrowTypeError]] function object must not be extensible https://bugs.webkit.org/show_bug.cgi?id=108873

Reviewed by Yusuke Suzuki.

JSTests:

* test262/expectations.yaml: Mark 8 test cases as passing.

Source/JavaScriptCore:

This patch:

1. Sets the value of %ThrowTypeError% "name" property to the empty string,
   as required [1] for anonymous built-in functions.

2. Calls JSObject::freeze() on %ThrowTypeError%, making it non-extensible and
   its "name" and "length" properties non-configurable to match the spec [2].

Both changes align JSC with V8 and SpiderMonkey.

[1]: https://tc39.es/ecma262/#sec-ecmascript-standard-built-in-objects
[2]: https://tc39.es/ecma262/#sec-%throwtypeerror%

* runtime/JSGlobalObject.cpp:
(JSC::JSGlobalObject::init):


Canonical link: https://commits.webkit.org/228513@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@266036 268f45cc-cd09-0410-ab3c-d52691b4dbfc